@@ -1,3 +1,9 @@
+2021-12-20  Mark Wielaard  <mark@klomp.org>
+
+	* dwfl_segment_report_module.c (dwfl_segment_report_module): Move
+	and initialize struct elf_build_id build_id early. Only free memory
+	early when no longer needed. Free memory if not NULL at out.
+
 2021-12-19  Mark Wielaard  <mark@klomp.org>
 
 	* dwfl_segment_report_module.c (dwfl_segment_report_module): Copy
